--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body { background-image: -webkit-gradient(linear, left top, left bottom, from(#2
 .row { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
 /*inicio de Lanzamientos*/
-.mos { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+.mos { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; margin-top: 10px; }
 
 .titlebody { text-align: center; width: 150px; border: 1px solid black; }
 
@@ -77,7 +77,9 @@ p { margin-top: 5px; margin-bottom: 5px; }
 
 .product1:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
 
-.maincontent { display: -ms-grid; display: grid; -ms-grid-columns: 50% 50%; grid-template-columns: 50% 50%; width: 100%; height: auto; -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; }
+.maincontent__pagos { padding-top: 10px; }
 
 .productSale { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; display: inline-block; }
+
+.backg { background-color: #dbdbdd; padding: 5px; margin-top: 10px; border-radius: 10px; }
 /*# sourceMappingURL=style.css.map */
